feat: enhance Aeternum Research Tool
- Improve ESLint config with TypeScript and React support
- Add proper input label to search bar for accessibility
- Update README with comprehensive project documentation
- Fix configuration structure and add best practices

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "types": ["react/next", "react-dom/next"]
+    "jsx": "react-jsx"
   },
-  "include": ["."],
+  "include": ["src", "components", "services", "types.ts", "index.tsx", "App.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
