--- a/package.json
+++ b/package.json
@@ -2,26 +2,52 @@
   "name": "aeternum-research-tool",
   "private": true,
   "version": "0.0.0",
+  "author": "Involvex",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/involvex/new-world-expansion-research.git"
+  },
+  "description": "A research tool that uses AI to search the web for information about the New World Aeternum expansion",
+  "keywords": [ "genai", "research", "aeternum", "new world", "expansion"],
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "npx eslint . --ext .ts,.tsx --config eslint.config.js",
+    "lint:fix": "npx eslint . --ext .ts,.tsx --config eslint.config.js --fix"
   },
   "dependencies": {
     "@google/genai": "^1.20.0",
+    "dotenv": "^17.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
     "@tailwindcss/typography": "^0.5.13",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@types/node": "^24.5.2",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.3",
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.36.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.4.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3",
-    "vite": "^5.3.1"
-  }
+    "typescript-eslint": "^8.44.0",
+    "vite": "^7.1.6"
+  },
+  "files": [
+    "node_modules",
+    "package-lock.json",
+    "vite.config.ts",
+    "tailwind.config.js",
+    "postcss.config.js",
+    "dist"
+  ]
 }
