--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aeternum-research-tool",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "author": "Involvex",
   "repository": {
     "type": "git",
@@ -21,40 +21,56 @@
   },
   "scripts": {
     "dev": "vite",
+    "server": "node server.cjs",
+    "prebuild": "npm run lint:fix && npm run format",
+    "format": "prettier . --write ",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "npx eslint . --ext .ts,.tsx --config eslint.config.js",
-    "lint:fix": "npx eslint . --ext .ts,.tsx --config eslint.config.js --fix"
+    "lint:fix": "npx eslint . --ext .ts,.tsx --config eslint.config.js --fix",
+    "test": "vitest",
+    "start": "node ./bin/cli.js"
   },
   "dependencies": {
-    "@google/genai": "^1.20.0",
+    "@google/generative-ai": "^0.24.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "ora": "^9.0.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "yargs-parser": "^22.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/typography": "^0.5.13",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
+    "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.36.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.4.0",
+    "jsdom": "^27.0.0",
     "postcss": "^8.4.39",
+    "prettier": "^3.6.2",
+    "supertest": "^7.1.4",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3",
+    "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.0",
-    "vite": "^7.1.6"
+    "vite": "^7.1.6",
+    "vitest": "^3.2.4",
+    "vitest-preview": "^0.0.1"
   },
   "files": [
     "bin",
     "docs"
-  ]
+  ],
+  "//configurationDefaults": []
 }
